FairWear/FairWearServices/Gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway # Name of the deployment / pod
  namespace: fairwear # Name of the namespace
  labels:
    app: fairwear-gateway # Name of your application
spec:
  selector:
    matchLabels:
      app: fairwear-gateway # Name of your application
  replicas: 2 # Number of replicas
  template:
    metadata:
      labels:
        app: fairwear-gateway # Name of your application
    spec:
      containers:
      # Containers are the individual pieces of your application that you want
      # to run.
      - name: fairwear-gateway # Name of the container
        image: docker-registry.leedrisdev.engineer/gateway_api:macos # The image you want to run
        imagePullPolicy: Always # Always pull the image
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        #   requests:
        #     memory: 256Mi
        #     cpu: "0.2"
        ports:
        # Ports are the ports that your application uses.
        - containerPort: 80 # The port that your application uses
      imagePullSecrets: # If you need to pull from a private registry
      - name: regcred # Name of the secret
