FairWear/FairWearServices/Gateway/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name:  gateway-loadbalancer
  namespace: fairwear
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: "gateway loadbalancer"
spec:
  selector:
    app:  fairwear-gateway
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
